--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:wght@473&family=Playwrite+NZ+Guides&family=Playwrite+SK+Guides&family=Playwrite+US+Trad+Guides&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
  *{   
-    font-family: "Poppins,snas-serif";
+    font-family: "Poppins",sans-serif;
         margin:0;
         padding:0;
         box-sizing: border-box;
@@ -15,7 +15,11 @@
     --second-color:#edeae3;
     --text-color:#1b1b1b;
     --bg-color:#fff;
+    --box-shadow:2px 2px 10px 4px rgb(14 55 54 / 15%);
 
+}
+section{
+    padding:50px 100px;
 }
 img{
     width:100%;
@@ -37,9 +41,6 @@ header{
     background: var(--text-color);
 
 }
-.logo.img{
-    width:60px;
-}
 .navbar{
     display:flex;
 }
@@ -55,4 +56,92 @@ header{
     border-radius: 0.2rem;
     transition:0.2s all linear;
     
+}
+.header-icon{
+    font-size: 22px;
+    cursor: pointer;
+    z-index: 10000;
+    display: flex;
+    column-gap: 0.8rem;
+}
+.header-icon .bx{
+    color:var(--bg-color);
+}
+.header-icon .bx:hover{
+    color:var(--main-color);
+}
+#menu-icon{
+    color: var(--bg-color);
+    font-size: 24px;
+    z-index:100001;
+    cursor: pointer;
+    display: none;
+}
+.search-box{
+    position: absolute;
+    top:-100%;
+    left:50%;
+    transform: translate(-50%);
+    background: var(--bg-color);
+    width: 100%;
+}
+.search-box.active{
+    top:110%;
+    box-shadow: var(--box-shadow);
+    transition:0.2s all linear;
+
+}
+.search-box input{
+    padding:20px;
+    border:none;
+    outline: none;
+    width:100%;
+    font-size:1rem;
+    color:var(--main-color);
+}
+.search-box::placeholder{
+    font-size: 1rem;
+    font-weight:500;
+}
+.home{
+    width:100%;
+    min-height:100vh;
+    background: url(coffee-flowers.jpg);
+    background: url(coffee-flowers.jpg) no-repeat center center/cover;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    display:grid;
+    grid-template-columns: repeat(auto-fit,minmax(17rem,auto));
+    align-items: center;
+    gap:1.5rem;
+
+}
+.logo img{
+    width: 50px;
+    height:auto;
+    object-fit: cover;
+    border-radius: 50%;
+    border:2px solid var(--main-color);
+}
+.home-text h1{
+    font-size: 3.4rem;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    color: rgb(217, 104, 123);
+}
+.home-txt p{
+    font-size: 0.938rem;
+    color:var(--bg-color);
+    margin:0.5rem 0 1.4rem;
+}
+.btn{
+    padding:10px 40px;
+    border-radius: 0.3rem;
+    background: rgb(217, 104, 123);
+    color:var(--bg-color);
+    font-weight: 500;
+}
+.btn:hover{
+    background:pink;
 }
