--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ header{
     align-items: center;
     padding:18px 100px;
     transition:0.5s linear;
-    background: var(--text-color);
+    background: rgb(217, 104, 123);
 
 }
 .navbar{
@@ -129,11 +129,14 @@ header{
     text-transform: uppercase;
     letter-spacing: 1px;
     color: rgb(217, 104, 123);
+    margin-bottom: 1rem;
 }
 .home-txt p{
     font-size: 0.938rem;
     color:var(--bg-color);
     margin:0.5rem 0 1.4rem;
+    margin-bottom: 1.5rem;
+    line-height: 1.6;
 }
 .btn{
     padding:10px 40px;
@@ -141,6 +144,8 @@ header{
     background: rgb(217, 104, 123);
     color:var(--bg-color);
     font-weight: 500;
+    letter-spacing: 0.5px;
+    display:inline-block;
 }
 .btn:hover{
     background:pink;
