--- a/style.css
+++ b/style.css
@@ -78,14 +78,16 @@ header{
     display: none;
 }
 .search-box{
+    display: none;
     position: absolute;
-    top:-100%;
+    top:100%;
     left:50%;
     transform: translate(-50%);
     background: var(--bg-color);
     width: 100%;
 }
 .search-box.active{
+    display: block;
     top:110%;
     box-shadow: var(--box-shadow);
     transition:0.2s all linear;
@@ -149,4 +151,27 @@ header{
 }
 .btn:hover{
     background:pink;
+}
+.about{
+    display:grid;
+    grid-template-columns: repeat(auto-fit,minmax(17rem,auto));
+    gap:1.5rem;
+}
+.about-img img{
+    border-radius: 0.5rem;
+}
+.about-text h2{
+    font-size: 1.8rem;
+    text-transform: uppercase;
+}
+.about-text p{
+    font-size: 0.938rem;
+    margin:0.5rem 0 1.1rem;
+}
+.heading{
+    text-align: center;
+}
+.heading h2{
+    font-size: 1.8rem;
+    text-transform: uppercase;
 }
