--- a/style.css
+++ b/style.css
@@ -108,8 +108,8 @@ header{
 .home{
     width:100%;
     min-height:100vh;
-    background: url(coffee-flowers.jpg);
-    background: url(coffee-flowers.jpg) no-repeat center center/cover;
+    background: url(img/coffee-flowers.jpg);
+    background: url(img/coffee-flowers.jpg) no-repeat center center/cover;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -174,4 +174,58 @@ header{
 .heading h2{
     font-size: 1.8rem;
     text-transform: uppercase;
+}
+.products-container{
+    display:grid;
+    grid-template-columns: repeat(auto-fit,minmax(280px,auto));
+    gap:1.5rem;
+    margin-top: 2rem;
+}
+.products-container .box{
+    position: relative;
+    padding:10px;
+    display:flex;
+    flex-direction: column;
+    justify-content:center;
+    border-radius: 0.5rem;
+    box-shadow:var(--box-shadow);
+}
+.products-container img{
+    width:100%;
+    height:250px;
+    object-fit: contain;
+    object-position: center;
+    padding: 20px;
+    background:#f1f1f1;
+    border-radius: 0.5rem;
+}
+.products-container .box h3{
+    font-size: 1rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin:0.rem 0 0.5rem;
+}
+.products-container .box .content{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.products-container .box .content span{
+    padding:0.1rem;
+    color:var(--bg-color);
+    background: var(--main-color);
+    border-radius:4px;
+    font-weight: 500;
+}
+.products-container .box .content a{
+    padding:0.1rem;
+    color:var(--text-color);
+    border:2px solid var(--main-color);
+    border-radius:4px;
+    text-transform: uppercase;
+}
+.products-container .box .content a:hover{
+    background: var(--main-color);
+    color:var(--bg-color);
+    transition: 0.2s all linear;
 }
