--- a/style.css
+++ b/style.css
@@ -38,8 +38,10 @@ header{
     align-items: center;
     padding:18px 100px;
     transition:0.5s linear;
-    background: rgb(217, 104, 123);
-
+}
+header.shadow{
+    background: var(--text-color);
+    box-shadow: var(--box-shadow);
 }
 .navbar{
     display:flex;
@@ -228,4 +230,195 @@ header{
     background: var(--main-color);
     color:var(--bg-color);
     transition: 0.2s all linear;
+}
+.customers-container{
+    display:grid;
+    grid-template-columns: repeat(auto-fit,minmax(280px,auto));
+    gap:1.5rem;
+    margin-top: 2rem;
+}
+.customers-container .box{
+    padding: 20px;
+    box-shadow: var(--box-shadow);
+    border-radius: 0.5rem;
+    text-align: center;
+}
+.stars .bx{
+    color:var(--main-color);
+}
+.customers-container .box p{
+    font-size: 0.938rem;
+}
+.customers-container .box h2{
+    font-size: 1.2rem;
+    font-weight:600;
+    margin:0.5rem 0 0.5rem;
+}
+.customers-container .box img{
+    width:70px;
+    height:70px;
+    border-radius:50%;
+    object-fit: cover;
+}
+.customers-container .box:hover{
+    background:var(--second-color);
+    transition: 0.2s all linear;
+
+}
+.footer{
+    background: var(--second-color);
+    padding: 50px 100px; 
+    display:grid;
+    grid-template-columns:repeat(auto-fit, minmax(200px, 1fr));
+    gap:1.5rem;
+    color: var(--text-color);
+}
+.footer-box h2{
+    font-size:1.2rem;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.footer-box p{
+    font-size: 0.938rem;
+    margin-bottom: 10px;
+}
+.social{
+    display: flex;
+    align-items: center;
+    column-gap: 0.5rem;
+}
+.social a .bx{
+    font-size:24px;
+    color:var(--text-color);
+    padding:10px;
+    background: var(--second-color);
+    border-radius: 0.2rem;
+}
+.social a .bx:hover{
+    background: var(--main-color);
+    color:var(--bg-color);
+}
+.footer-box h3{
+    font-weight: 600;
+    margin-bottom: 10px;
+    color:var(--text-color);
+}
+.footer-box li{
+    list-style: none;
+    padding: 0;
+}
+.footer-box li a{
+    color:var(--text-color);
+}
+.footer-box li a:hover{
+    color:var(--main-color);
+}
+.contact{
+    display: flex;
+    flex-direction: column;
+    row-gap: 0.5rem;
+}
+.contact span{
+    display:flex;
+    align-items: center;
+}
+.contact i{
+    font-size: 20px;
+    margin-right: 1rem;
+}
+.copyright{
+    padding: 20px;
+    text-align: center;
+    background: var(--second-color);
+
+}
+html {
+    scroll-behavior: smooth;
+}
+@media(max-width:1058px){
+    header{
+        padding: 16px 60px;
+    }
+    section{
+        padding:50px 60px;
+    }
+    .home-text h1{
+        font-size: 2.4rem;
+    }
+}
+@media(max-width:991px){
+    header{
+        padding: 16px 4%;
+    }
+    section{
+        padding:50px 4%;
+    }
+    .home-text h1{
+        font-size: 2rem;
+    }
+}
+@media(max-width:768px){
+    header{
+        padding: 12px 4%;
+    }
+    #menu-icon{
+        display:initial;
+    }
+    .navbar{
+        position: absolute;
+        top:-570px;
+        left:0;
+        right:0;
+        display: flex;
+        flex-direction: column;
+        background: var(--second-color);
+        row-gap: 1.4rem;
+        padding:20px;
+        transition:0.3s;
+        text-align: center;
+    }
+    .navbar a{
+        color: var(--text-color);
+
+    }
+    .navbar a:hover{
+        color:var(--bg-color);
+    }
+    .navbar.active{
+        top:100%;
+    }
+    .about{
+        align-items: center;
+
+    }
+}
+@media(max-width:360px){
+    header{
+        padding: 11px 4%;
+    }
+    .logo img{
+        width:45px;
+    }
+    .home-text{
+        padding-top: 15px;
+    }
+    .home-text h1{
+        font-size: 1.4rem;
+    }
+    .home-text p{
+        font-size: 0.8rem;
+        font-weight: 300;
+    }
+    .about-img{
+        order: 2;
+    }
+    .about-text{
+        text-align: center;
+    }
+    .about-text h2{
+        font-size: 1.2rem;
+    }
+    .heading h2{
+        font-size: 1.2rem;
+    }
 }
